Add more mdx content

--- a/content/blog/code-hike-basics/index.mdx
+++ b/content/blog/code-hike-basics/index.mdx
@@ -16,15 +16,34 @@ Adding a filename to the codeblock
 
 ```js app.js focus=1,3:4
 function lorem(ipsum, dolor = 1) {
-  const sit = ipsum == null ? 0 : ipsum.sit;
-  dolor = sit - amet(dolor);
-  return sit ? consectetur(ipsum) : [];
+  const sit = ipsum == null ? 0 : ipsum.sit
+  dolor = sit - amet(dolor)
+  return sit ? consectetur(ipsum) : []
 }
 ```
 
 ### Testing level 3
 
 some stuff
+
+<CH.Preview
+files={[]}
+  presetConfig={{
+    entry: '/App.js',
+    template: 'react',
+    files: {
+      '/App.js': {
+        code: `import React from "react";
+    export default App = () => {
+      return (
+        <div>Testing the preview</div>
+      )
+    }
+    `,
+      },
+    },
+  }}
+/>
 
 #### Testing level 4
 
@@ -36,9 +55,9 @@ To add more tabs, wrap multiple codeblocks with `<CH.Code/>`:
 
 ```js app.js
 function lorem(ipsum, dolor = 1) {
-  const sit = ipsum == null ? 0 : ipsum.sit;
-  dolor = sit - amet(dolor);
-  return sit ? consectetur(ipsum) : [];
+  const sit = ipsum == null ? 0 : ipsum.sit
+  dolor = sit - amet(dolor)
+  return sit ? consectetur(ipsum) : []
 }
 ```
 
@@ -60,9 +79,9 @@ The _editor_ can be splitted vertically in two panels using `---`
 
 ```js app.js
 function lorem(ipsum, dolor = 1) {
-  const sit = ipsum == null ? 0 : ipsum.sit;
-  dolor = sit - amet(dolor);
-  return sit ? consectetur(ipsum) : [];
+  const sit = ipsum == null ? 0 : ipsum.sit
+  dolor = sit - amet(dolor)
+  return sit ? consectetur(ipsum) : []
 }
 ```
 
@@ -86,11 +105,11 @@ You can make a [Markdown link](focus://4:7), whose href is `focus://` followed b
 
 ```js
 function lorem(ipsum, dolor) {
-  const sit = "lorem ipsum";
-  dolor = elit(dolor, 3);
+  const sit = 'lorem ipsum'
+  dolor = elit(dolor, 3)
   while (++consectetur < amet) {
-    sit.eiusmod(150);
-    tempor(ipsum, adipiscing);
+    sit.eiusmod(150)
+    tempor(ipsum, adipiscing)
   }
 }
 ```
@@ -103,14 +122,14 @@ You can also [highlight specific characters](focus://1[23:27],3) within a line, 
 
 <CH.Section>
 
-If you have a `CH.Code` component with multiple files, you can specify which file should get the focus treatment by utilizing the file name. We can use `focus://index.js#2:3` to [focus lines 2-3](focus://index.js#2:3) in the `index.js` file and `focus://styles.css#2:3` to [focus lines 2-3](focus://styles.css#2:3) in the `styles.css` file. 
+If you have a `CH.Code` component with multiple files, you can specify which file should get the focus treatment by utilizing the file name. We can use `focus://index.js#2:3` to [focus lines 2-3](focus://index.js#2:3) in the `index.js` file and `focus://styles.css#2:3` to [focus lines 2-3](focus://styles.css#2:3) in the `styles.css` file.
 
 <CH.Code>
 
 ```js index.js
 function lorem(ipsum, dolor) {
-  const sit = ipsum - amet(dolor);
-  return sit + "lorem ipsum";
+  const sit = ipsum - amet(dolor)
+  return sit + 'lorem ipsum'
 }
 ```
 
@@ -135,9 +154,9 @@ Instead of the `focus` prop, you can use `box` to draw a boxed outline.
 
 ```js box=2[15:43]
 function lorem(ipsum, dolor = 1) {
-  const sit = ipsum == null ? 0 : ipsum.sit;
-  dolor = sit - amet(dolor);
-  return sit ? consectetur(ipsum, 0, dolor < 0 ? 0 : dolor) : [];
+  const sit = ipsum == null ? 0 : ipsum.sit
+  dolor = sit - amet(dolor)
+  return sit ? consectetur(ipsum, 0, dolor < 0 ? 0 : dolor) : []
 }
 ```
 
@@ -147,9 +166,9 @@ Instead of the `focus` prop, you can use `bg` to give the code a different backg
 
 ```js bg=2:4
 function lorem(ipsum, dolor = 1) {
-  const sit = ipsum == null ? 0 : ipsum.sit;
-  dolor = sit - amet(dolor);
-  return sit ? consectetur(ipsum, 0, dolor < 0 ? 0 : dolor) : [];
+  const sit = ipsum == null ? 0 : ipsum.sit
+  dolor = sit - amet(dolor)
+  return sit ? consectetur(ipsum, 0, dolor < 0 ? 0 : dolor) : []
 }
 ```
 
@@ -159,20 +178,20 @@ You can use comments inside the code to make the focus relative.
 
 ```js
 function lorem(ipsum, dolor = 1) {
-  const sit = ipsum == null && 0;
-  dolor = sit - amet(dolor);
+  const sit = ipsum == null && 0
+  dolor = sit - amet(dolor)
   // focus
-  return sit ? consectetur(ipsum) : [];
+  return sit ? consectetur(ipsum) : []
 }
 
 // focus(1:4)
 function adipiscing(...elit) {
-  console.log(elit);
-  return elit.map((ipsum) => ipsum.sit);
+  console.log(elit)
+  return elit.map(ipsum => ipsum.sit)
 }
 
 // focus[13:17]
-console.log("hey");
+console.log('hey')
 ```
 
 Same with other annotations like `bg` and `box`.
@@ -180,9 +199,9 @@ Same with other annotations like `bg` and `box`.
 ```js
 // bg(1:2)
 function foo() {
-  console.log("hover me");
+  console.log('hover me')
   // box[3:10]
-  return 8;
+  return 8
 }
 ```
 
@@ -191,15 +210,15 @@ You can pass a string parameter to comment annotations
 ```js index.js
 function lorem(ipsum, dolor = 1) {
   // bg(1:3) linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%)
-  const sit = ipsum == null && 0;
-  dolor = sit - amet(dolor);
-  return sit ? consectetur(ipsum) : [];
+  const sit = ipsum == null && 0
+  dolor = sit - amet(dolor)
+  return sit ? consectetur(ipsum) : []
 }
 
 function adipiscing(...elit) {
-  console.log(elit);
+  console.log(elit)
   // box[19:38] aqua
-  return elit.map((ipsum) => ipsum.sit);
+  return elit.map(ipsum => ipsum.sit)
 }
 ```
 
@@ -209,16 +228,16 @@ And now we introduce two more annotations: `link` and `label`
 
 ```js focus=4,8
 function lorem(ipsum, dolor = 1) {
-  const sit = ipsum == null && 0;
-  dolor = sit - amet(dolor);
+  const sit = ipsum == null && 0
+  dolor = sit - amet(dolor)
   // link[16:26] https://github.com/code-hike/codehike
-  return sit ? consectetur(ipsum) : [];
+  return sit ? consectetur(ipsum) : []
 }
 
 function adipiscing(...elit) {
   // label something something
-  console.log("hover me");
-  return elit.map((ipsum) => ipsum.sit);
+  console.log('hover me')
+  return elit.map(ipsum => ipsum.sit)
 }
 ```
 
