WIP: brush stroke link hover animation

--- a/content/blog/code-hike-basics/index.mdx
+++ b/content/blog/code-hike-basics/index.mdx
@@ -2,12 +2,11 @@
 slug: code-hike-basics
 title: Code Hike Basics
 date: 2022-04-27T19:00:39.168Z
-description: I am a description
+description: Check out some example implementations of basic Code Hike code block components.
 meta:
   keywords:
-    - web development
     - mdx
-published: true
+published: false
 ---
 
 ## Testing 123
